@@ -1,3 +1,4 @@
+ - Dropped support for compile-time PATCHED_DRIVE flag.
  - Bus encryption support
 
 2013-03-04: Version 0.6.0
